Fix fetcher styling on mobile

--- a/src/components/fetcher/Fetcher.css
+++ b/src/components/fetcher/Fetcher.css
@@ -5,7 +5,7 @@
   color: white;
 
   display: grid;
-  grid-template-columns: 80% 20%;
+  grid-template-columns: 50% 50%;
   grid-template-areas:
     'status lastcheck';
 }
